--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Notes</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- the tab header icon-->
+    <link rel="icon" type="image/x-icon" href="icons8-notes-50.png" />
+    <script src="main.js" defer></script>
+    <title>carolinelovesnotes</title>
+  </head>
+  <body>
+    <div id="notepad">Pour Out Your Thoughts</div>
+    <div class="create"></div>
+  </body>
 </html>
